--- a/study2/mystyle.css
+++ b/study2/mystyle.css
@@ -1,5 +1,84 @@
-
-h1 {
-    color: brown;
+* {
+    box-sizing: border-box;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+
+header {
+    background-color: #666;
+    padding: 20px;
+    text-align: center;
+    font-size: 30px;
+    color: white;
+}
+
+/* Create two columns/boxes that floats next to each other */
+
+nav {
+    float: left;
+    width: 40%;
+    height: 300px;
+    /* only for demonstration, should be removed */
+    background: #ccc;
+    padding: 20px;
+}
+
+article {
+    float: left;
+    padding: 20px;
+    width: 60%;
+    background-color: #f1f1f1;
+    height: 300px;
+}
+
+img {
+    max-height: 200px;
+    max-width: 300px;
+}
+/* Clear floats after the columns */
+
+section::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Style the footer */
+
+footer {
+    background-color: #777;
+    padding: 15px;
+    text-align: center;
+    color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+
+@media (max-width: 600px) {
+    nav, article {
+        width: 100%;
+        height: auto;
+    }
+}
+
+.zoom {
+    padding: 0px;
+    transition: transform .2s;
+    /* Animation */
+    margin: 0 auto;
+}
+
+.zoom:hover {
+    transform: scale(2.5);
+    /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.audio-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
