--- a/study2/mystyle.css
+++ b/study2/mystyle.css
@@ -2,6 +2,9 @@
     box-sizing: border-box;
 }
 
+h1 { font-size: 8vw }
+h3 { color: rgb(19, 9, 46);}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
